--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,13 +47,13 @@ jobs:
 
     # Prepare production deployment
     - name: Build for prod deployment
-      if: github.repository_owner == 'opencast' && github.ref == 'refs/heads/master'
+      if: github.repository_owner == 'opencast' && github.ref == 'refs/heads/main'
       run: |
         rm -rf build
         npm run build:release
 
     - name: Archive prod deployment files as artifact
-      if: github.repository_owner == 'opencast' && github.ref == 'refs/heads/master'
+      if: github.repository_owner == 'opencast' && github.ref == 'refs/heads/main'
       uses: actions/upload-artifact@v4
       with:
         name: prod-deployment-files
