--- a/package.json
+++ b/package.json
@@ -26,24 +26,26 @@
     "@fontsource-variable/roboto-flex": "^5.2.8",
     "@fontsource-variable/vazirmatn": "^5.2.8",
     "@iarna/toml": "^2.2.5",
-    "@opencast/appkit": "^0.4.1",
+    "@opencast/appkit": "^0.5.0",
     "@svgr/webpack": "^8.1.0",
     "babel-loader": "^10.0.0",
     "copy-webpack-plugin": "^13.0.1",
     "deepmerge": "^4.3.1",
     "fast-deep-equal": "^3.1.3",
+    "focus-trap-react": "^11.0.4",
     "html-webpack-plugin": "^5.6.4",
     "i18next": "^25.5.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "is-plain-object": "^5.0.0",
     "mustache": "^4.2.0",
     "oscilloscope": "^1.3.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-hook-form": "^7.63.0",
     "react-hotkeys-hook": "^5.1.0",
     "react-i18next": "^16.0.0",
     "react-icons": "^5.5.0",
+    "react-merge-refs": "^3.0.2",
     "react-select": "^5.10.2",
     "webm-duration-fix": "^1.0.4",
     "webpack": "^5.102.0",
@@ -55,9 +57,9 @@
     "@types/iarna__toml": "^2.0.5",
     "@types/mustache": "^4.2.6",
     "@types/node": "^24.6.1",
-    "@types/react": "^18.3.23",
+    "@types/react": "^19.2.0",
     "@types/react-beforeunload": "^2.1.5",
-    "@types/react-dom": "^18.3.7",
+    "@types/react-dom": "^19.2.0",
     "@types/react-page-visibility": "^6.4.4",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "eslint": "^9.33.0",
